2013-02-21  Ethan A Merritt  <merritt@u.washington.edu>

	*  src/plot.c:  The old test for whether a session was interactive 
	assumed that everything on the command line was either an input file
	name or an x11 option parsed by X11_args. This broke because
	(1) x11 is no longer the only interactive terminal.
	(2) there are options that occupy space on the command line but are
	not file names.  Some indicate non-interactive; some don't.
	Replace this test with one that only enters a non-interactive session
	if there are command line arguments that do not begin with '-' 
	(filename) or _do_ begin with '-e' (inline command).
	Bug #1212

2013-02-19  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/axis.c (gen_tics) src/unset.c (unset_log):  Do not zero out the
	log base when log scaling is disabled.  This allows gprintf formats
	%L and %l to work even when the axes are linear.

2013-02-19  Ethan A Merritt  <merritt@u.washington.edu>

	*  src/graphics.c (boundary):  Rotated x-axis tic labels are set
	automatically to right justify, but this happens too late for the code
	that reserves space for them.  Test for this as a special case.
	Bugs 1204, 1209

	* src/wxterminal/wxt_gui.cpp (wxt_update_key_box):  Fix array overrun
	caused by many 'notitle' plots appearing before any titled plots.
	Bug 1211

2013-02-18  Christoph Bersch  <cbersch@users.sf.net>

	* src/graphics.c:  Draw the zero axis lines in the same front/back
	layer as the axis and grid lines.

2013-02-18  Ethan A Merritt  <merritt@u.washington.edu>

	*  src/term_api.h term/cairo.trm term/canvas.trm term/svg.trm
	term/wxt.trm src/wxterminal/gp_cairo.c src/wxterminal/gp_cairo.h
	src/wxterminal/wxt_gui.cpp src/wxterminal/wxt_term.h:
	Add "square" to linecap options "round" and "butt".

2013-02-17  W. Trevor King  <wking@tremily.us>

	* configure.in src/datafile.c (df_open) docs/gnuplot.doc:
	New special file syntax  "<&N"  plots data read from an arbitrary file