@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.320 2012/12/27 17:36:06 sfeam Exp $
+dnl $Id: configure.in,v 1.321 2013/02/17 19:39:13 sfeam Exp $
 dnl
 dnl this is actually major.minor ...
 dnl note that for a non-beta release, we need to disable DEVELOPMENT_RELEASE
@@ -711,15 +711,6 @@ dnl FIXME AC_DEFINE(ULTRIX_KLUDGE)
 dnl Removed enable options for these
 dnl Just autodetect
 
-dnl SCO cgi
-AC_EGREP_CPP(yes,
-[#ifdef SCO
-yes
-#endif
-],AC_CHECK_LIB(ccgi, v_opnwk,
-    [AC_DEFINE(CGI,1,[ Define if you want to use the CGI terminal under SCO. ])
-     TERMLIBS="-lccgi $TERMLIBS"]))
-
 dnl Sun sunview
 AC_EGREP_CPP(yes,
 [#ifdef sun
@@ -1399,7 +1390,7 @@ fi
 
 AC_MSG_RESULT([])
 AC_MSG_RESULT([  Additional terminals are availaible in platform-specific makefiles:])
-AC_MSG_RESULT([   cgi (makefile.unx), pm (makefile.os2), be (BeOS), svga (MSDOS/djgpp)])
+AC_MSG_RESULT([   pm (makefile.os2), be (BeOS), svga (MSDOS/djgpp)])
 AC_MSG_RESULT([   sun (makefile.unx), unixpc (makefile.unx), windows (several options)])
 
 AC_MSG_RESULT([])
