@@ -1,3 +1,10 @@
+2013-02-22  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* configure.in src/term.h term/cgi.trm:  Remove vestigial support for
+	the SCO "cgi" graphics layer that sat on top of AES and VDI.
+	This was a graphical environment for the IBM PC and the Atari ST.
+	PC GEM was a fairly widely used GUI until the release of Windows 3.0. 
+
 2013-02-21  Ethan A Merritt  <merritt@u.washington.edu>
 
 	*  src/plot.c:  The old test for whether a session was interactive 
